refactor(rest): Remove deprecated use of URL; cleanup